2007-07-14  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_control):
	Also update rectangle handle sizes when canvas zoom is
	changed. (Forgot that in previous commit.)

2007-07-14  Martin Nordholts  <martinn@svn.gnome.org>

	Made the rectangle tool handles not resize during rectangle
	manipulation, as outlined in the spec, by separating highlight
	updating and handle size updating calls.

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_configure):
	Renamed to
	(gimp_rectangle_tool_update_handle_sizes): and moved
	gimp_rectangle_tool_set_highlight out of it. These two are now
	called independantly.

2007-07-14  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_clamp_width)
	(gimp_rectangle_tool_clamp_height): Fixed crash when creating a
	rectangle with constraints outside of canvas bounds.

2007-07-13  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c
	(gimp_rectangle_tool_button_release): Don't execute selection if a
	dead area is clicked.

2007-07-13  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c
	(gimp_rectangle_tool_active_modifier_key): Update handle sizes and
	highlight area also when Ctrl is released.

2007-07-13  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/common/psd-load.c (load_image): safeguard to avoid
	crashes while loading corrupt PSD images.  Fixes bug #327444.

2007-07-13  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/psd-load.c: use g_printerr() for debug output.

2007-07-12  Sven Neumann  <sven@gimp.org>

	Work around Pango appending " Not-Rotated" to font names:

	* app/text/gimptext.c (gimp_text_set_property)
	* app/text/gimpfontlist.c (gimp_font_list_add_font): strip
	" Not-Rotated" from the font name.

2007-07-12  Sven Neumann  <sven@gimp.org>

	* authors.xml: added two more contributors.

2007-07-12  Sven Neumann  <sven@gimp.org>
