@@ -1,5 +1,12 @@
 2007-07-14  Martin Nordholts  <martinn@svn.gnome.org>
 
+	* app/tools/gimprectangletool.c
+	(gimp_rectangle_tool_set_highlight): Check agains tool->display,
+	this check was lost when this function was moved out of
+	gimp_rectangle_tool_configure.
+
+2007-07-14  Martin Nordholts  <martinn@svn.gnome.org>
+
 	* app/tools/gimprectangletool.c (gimp_rectangle_tool_control):
 	Also update rectangle handle sizes when canvas zoom is
 	changed. (Forgot that in previous commit.)
